--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,14 @@
 
 .background {
     position: relative;
-    background-image: url("./background.png");
+    background-image: url("./assets/background.png");
     width: 1157px;
     height: 288px;
 }
 
 .ground {
     position: absolute;
-    background-image: url("./ground.png");
+    background-image: url("./assets/ground.png");
     width: 1157px;
     height: 16px;
     bottom: 0;
@@ -19,7 +19,7 @@
 
 .pipe {
     position: absolute;
-    background-image: url("./pipe.png");
+    background-image: url("./assets/pipe.png");
     width: 70px;
     height: 288px;
 }
@@ -27,19 +27,9 @@
 
 .bird {
     position: absolute;
-    width: 15px;
-    height: 15px;
-    background-color: #fff;
+    width: 38px;
+    height: 24px;
+    background-image: url("./assets/bird.png");
 }
 
-.line {
-    fill: none;
-    /* stroke: steelblue; */
-    stroke-width: 2px;
-  }
-  
-
-  circle {
-    /* fill: steelblue; */
-    opacity: 0.7;
-  }
+.tippy-box[data-animation=fade][data-state=hidden]{opacity:0}[data-tippy-root]{max-width:calc(100vw - 10px)}.tippy-box{position:relative;background-color:#333;color:#fff;border-radius:4px;font-size:14px;line-height:1.4;white-space:normal;outline:0;transition-property:transform,visibility,opacity}.tippy-box[data-placement^=top]>.tippy-arrow{bottom:0}.tippy-box[data-placement^=top]>.tippy-arrow:before{bottom:-7px;left:0;border-width:8px 8px 0;border-top-color:initial;transform-origin:center top}.tippy-box[data-placement^=bottom]>.tippy-arrow{top:0}.tippy-box[data-placement^=bottom]>.tippy-arrow:before{top:-7px;left:0;border-width:0 8px 8px;border-bottom-color:initial;transform-origin:center bottom}.tippy-box[data-placement^=left]>.tippy-arrow{right:0}.tippy-box[data-placement^=left]>.tippy-arrow:before{border-width:8px 0 8px 8px;border-left-color:initial;right:-7px;transform-origin:center left}.tippy-box[data-placement^=right]>.tippy-arrow{left:0}.tippy-box[data-placement^=right]>.tippy-arrow:before{left:-7px;border-width:8px 8px 8px 0;border-right-color:initial;transform-origin:center right}.tippy-box[data-inertia][data-state=visible]{transition-timing-function:cubic-bezier(.54,1.5,.38,1.11)}.tippy-arrow{width:16px;height:16px;color:#333}.tippy-arrow:before{content:"";position:absolute;border-color:transparent;border-style:solid}.tippy-content{position:relative;padding:5px 9px;z-index:1}
